CSI: Fix gc0309/gt2005/ov5640 bug and add ov5650+mv9335.

--- a/drivers/media/video/sun4i_csi/device/Makefile
+++ b/drivers/media/video/sun4i_csi/device/Makefile
@@ -16,4 +16,4 @@ obj-$(CONFIG_CSI_GC0329)					+= gc0329.o
 obj-$(CONFIG_CSI_GC0309)					+= gc0309.o
 obj-$(CONFIG_CSI_TVP5150)					+= tvp5150.o
 obj-$(CONFIG_CSI_S5K4EC)					+= s5k4ec.o
-
+obj-$(CONFIG_CSI_OV5650_MV9335)		+= ov5650_mv9335.o
