--- a/arch/arm/configs/sun4i_defconfig
+++ b/arch/arm/configs/sun4i_defconfig
@@ -1527,6 +1527,7 @@ CONFIG_CSI_GC0329=m
 CONFIG_CSI_GC0309=m
 CONFIG_CSI_TVP5150=m
 CONFIG_CSI_S5K4EC=m
+CONFIG_CSI_OV5650_MV9335=m
 # CONFIG_RADIO_ADAPTERS is not set
 CONFIG_AUDIO_ENGINE=y
 CONFIG_ACE_CONFIG=y
