--- a/drivers/media/video/sun5i_csi/device/Makefile
+++ b/drivers/media/video/sun5i_csi/device/Makefile
@@ -16,4 +16,4 @@ obj-$(CONFIG_CSI_GC0329)					+= gc0329.o
 obj-$(CONFIG_CSI_GC0309)					+= gc0309.o
 obj-$(CONFIG_CSI_TVP5150)					+= tvp5150.o
 obj-$(CONFIG_CSI_S5K4EC)					+= s5k4ec.o
-
+obj-$(CONFIG_CSI_OV5650_MV9335)		+= ov5650_mv9335.o
