--- a/arch/arm/configs/sun5i_elite_defconfig
+++ b/arch/arm/configs/sun5i_elite_defconfig
@@ -2027,6 +2027,7 @@ CONFIG_USB_SW_SUN5I_USB_MANAGER=y
 # CONFIG_USB_SW_SUN5I_USB0_HOST_ONLY is not set
 CONFIG_USB_SW_SUN5I_USB0_OTG=y
 CONFIG_USB_SW_SUN5I_USB_DEBUG=y
+# CONFIG_USB_SW_PERIPHERAL_REMOTE is not set
 CONFIG_MMC=y
 # CONFIG_MMC_DEBUG is not set
 CONFIG_MMC_UNSAFE_RESUME=y
