--- a/arch/arm/configs/sun5i_elite_defconfig
+++ b/arch/arm/configs/sun5i_elite_defconfig
@@ -2194,6 +2194,13 @@ CONFIG_MACH_NO_WESTBRIDGE=y
 #
 # CONFIG_ALTERA_STAPL is not set
 CONFIG_CLKDEV_LOOKUP=y
+CONFIG_NEW_GPIO=y
+CONFIG_GPIO_SW_CLASS=y
+
+#
+# GPIO_SW drivers
+#
+CONFIG_GPIO_SW=m
 CONFIG_CLKSRC_MMIO=y
 
 #
