--- a/drivers/gsensor/Kconfig
+++ b/drivers/gsensor/Kconfig
@@ -13,6 +13,13 @@ config SENSORS_BMA250
 	help
 	  If you say yes here you get support for Bosch Sensortec's 
 	  acceleration sensors BMA250.
+	  
+config SENSORS_GSENSOR
+	tristate "gsensor detect support"
+	depends on I2C
+	help
+	  If you say yes here you get support for Detection Sensor.	  
+	  
 
 config MEMSIC_ECOMPASS
 	tristate "MEMSIC eCompass Driver Support"
