--- a/drivers/hwmon/Kconfig
+++ b/drivers/hwmon/Kconfig
@@ -56,16 +56,21 @@ config SENSORS_MMA8452
 	help
 	  If you say yes here you get support for the Freescale 3-Axis
 	  Orientation/Motion Detection Sensor.
-
-config SENSORS_DMARD06
-	tristate "DMARD06 3-Axis Orientation/Motion Detection Sensor Support"
+	  
+config SENSORS_KIONIX_ACCEL
+	tristate "kionix acceleration sensor support"
 	select I2C
 	depends on HWMON
-	default m
 	help
-	  If you say yes here you get support for the Freescale 3-Axis 
-	  Orientation/Motion Detection Sensor.
-
+	  If you say yes here you get support for acceleration sensors KIONIX.
+	  
+config SENSORS_AFA750
+	tristate "AFA750 acceleration sensor support"
+	select I2C
+	depends on HWMON
+	help
+	  If you say yes here you get support for acceleration sensors AFA750.
+	  
 config SENSORS_ABITUGURU
 	tristate "Abit uGuru (rev 1 & 2)"
 	depends on X86 && DMI && EXPERIMENTAL
