modify config options of gsensor

--- a/arch/arm/configs/a13_nuclear_defconfig
+++ b/arch/arm/configs/a13_nuclear_defconfig
@@ -1142,6 +1142,7 @@ CONFIG_SERIO_LIBPS2=y
 # CONFIG_GAMEPORT is not set
 CONFIG_GSENSOR=y
 CONFIG_SENSORS_BMA250=m
+CONFIG_SENSORS_GSENSOR=m
 CONFIG_MEMSIC_ECOMPASS=m
 CONFIG_SENSORS_MXC622X=m
 CONFIG_SENSORS_DMARD06=m
@@ -1301,6 +1302,8 @@ CONFIG_HWMON=y
 #
 CONFIG_SENSORS_MMA7660=m
 CONFIG_SENSORS_MMA8452=m
+CONFIG_SENSORS_KIONIX_ACCEL=m
+CONFIG_SENSORS_AFA750=m
 # CONFIG_SENSORS_AD7414 is not set
 # CONFIG_SENSORS_AD7418 is not set
 # CONFIG_SENSORS_ADCXX is not set
