--- a/arch/arm/configs/a12_nuclear_defconfig
+++ b/arch/arm/configs/a12_nuclear_defconfig
@@ -795,8 +795,9 @@ CONFIG_BLK_DEV_RAM_SIZE=4096
 # CONFIG_SENSORS_LIS3LV02D is not set
 CONFIG_MISC_DEVICES=y
 # CONFIG_AD525X_DPOT is not set
-# CONFIG_SUN4I_VIBRATOR is not set
+CONFIG_SUN4I_VIBRATOR=m
 CONFIG_SUNXI_DBGREG=m
+CONFIG_SUNXI_HW_TEST=y
 CONFIG_ANDROID_PMEM=y
 # CONFIG_INTEL_MID_PTI is not set
 # CONFIG_ICS932S401 is not set
@@ -1070,7 +1071,7 @@ CONFIG_KEYBOARD_ATKBD=y
 # CONFIG_KEYBOARD_SUNKBD is not set
 # CONFIG_KEYBOARD_XTKBD is not set
 CONFIG_KEYBOARD_SUN4IKEYPAD=m
-CONFIG_KEYBOARD_SUN4I_KEYBOARD=m
+CONFIG_KEYBOARD_SUN4I_KEYBOARD=y
 CONFIG_KEYBOARD_SW_KEYBOARD=m
 CONFIG_KEYBOARD_HV2605_KEYBOARD=m
 CONFIG_IR_SUN5I=m
@@ -1141,9 +1142,10 @@ CONFIG_SERIO_LIBPS2=y
 # CONFIG_GAMEPORT is not set
 CONFIG_GSENSOR=y
 CONFIG_SENSORS_BMA250=m
+CONFIG_SENSORS_GSENSOR=m
 CONFIG_MEMSIC_ECOMPASS=m
 CONFIG_SENSORS_MXC622X=m
-# CONFIG_SENSORS_DMARD06 is not set
+CONFIG_SENSORS_DMARD06=m
 
 #
 # Character devices
@@ -1299,6 +1301,9 @@ CONFIG_HWMON=y
 # Native drivers
 #
 CONFIG_SENSORS_MMA7660=m
+CONFIG_SENSORS_MMA8452=m
+CONFIG_SENSORS_KIONIX_ACCEL=m
+CONFIG_SENSORS_AFA750=m
 # CONFIG_SENSORS_AD7414 is not set
 # CONFIG_SENSORS_AD7418 is not set
 # CONFIG_SENSORS_ADCXX is not set
@@ -1957,7 +1962,7 @@ CONFIG_MMC=y
 CONFIG_MMC_UNSAFE_RESUME=y
 # CONFIG_MMC_CLKGATE is not set
 # CONFIG_MMC_EMBEDDED_SDIO is not set
-# CONFIG_MMC_PARANOID_SD_INIT is not set
+CONFIG_MMC_PARANOID_SD_INIT=y
 
 #
 # MMC/SD/SDIO Card Drivers
@@ -1999,8 +2004,8 @@ CONFIG_RTC_INTF_DEV=y
 # CONFIG_RTC_INTF_DEV_UIE_EMUL is not set
 CONFIG_RTC_INTF_ALARM=y
 CONFIG_RTC_INTF_ALARM_DEV=y
-# CONFIG_RTC_ALARM_CLOCK_WAKEUP is not set
-# CONFIG_RTC_ALARM_SHUTDOWN_WAKEUP is not set
+CONFIG_RTC_ALARM_CLOCK_WAKEUP=y
+CONFIG_RTC_ALARM_SHUTDOWN_WAKEUP=y
 # CONFIG_RTC_DRV_TEST is not set
 
 #
@@ -2119,6 +2124,7 @@ CONFIG_MACH_NO_WESTBRIDGE=y
 # CONFIG_ALTERA_STAPL is not set
 CONFIG_CLKDEV_LOOKUP=y
 CONFIG_CLKSRC_MMIO=y
+# CONFIG_GATOR_PERF is not set
 
 #
 # File systems
