--- a/arch/arm/configs/a13_nuclear_defconfig
+++ b/arch/arm/configs/a13_nuclear_defconfig
@@ -1957,6 +1957,7 @@ CONFIG_USB_SW_SUN5I_USB_MANAGER=y
 # CONFIG_USB_SW_SUN5I_USB0_HOST_ONLY is not set
 CONFIG_USB_SW_SUN5I_USB0_OTG=y
 CONFIG_USB_SW_SUN5I_USB_DEBUG=y
+CONFIG_USB_PORT_POWER_MANAGEMENT=y
 CONFIG_MMC=y
 # CONFIG_MMC_DEBUG is not set
 CONFIG_MMC_UNSAFE_RESUME=y
