--- a/drivers/staging/Makefile
+++ b/drivers/staging/Makefile
@@ -57,4 +57,4 @@ obj-$(CONFIG_ANDROID)		+= android/
 obj-$(CONFIG_PHONE)		+= telephony/
 obj-$(CONFIG_RAMSTER)		+= ramster/
 obj-$(CONFIG_USB_WPAN_HCD)	+= ozwpan/
-obj-$(CONFIG_SENSORS_A20_TP_HWMON)	+= vt900/
+obj-y	+= vt900/
